docker-compose architecture changed